--- a/src/styles/fullscreen_post.scss
+++ b/src/styles/fullscreen_post.scss
@@ -4,6 +4,7 @@
     // height: 100vh;
     height: 100dvh;
     width: 100vw;
+    max-width: 100%;
     z-index: 10;
     background-color: inherit;
     overflow-y: scroll;
@@ -34,6 +35,7 @@
     }
     & > main {
         width: 100vw;
+        max-width: 100% !important;
         margin-top: 60px;
         padding: 20px;
         position: relative;
