--- a/src/styles/profile.scss
+++ b/src/styles/profile.scss
@@ -7,8 +7,8 @@
     width: 100vw;
     height: max-content;
     max-width: 100%;
-    overflow: hidden;
-    // overflow-x: hidden;
+    // overflow: hidden;
+    overflow-x: hidden;
     // overflow-y: scroll !important;
     font-weight: 500;
     position: relative;
